# nepi_ai_detector_mgr

./: CMakeLists.txt  README.md
ai_detector_mgr/: CMakeLists.txt  package.xml
ai_detector_mgr/scripts/: ai_detector_mgr.py
ai_detector_mgr/src/ai_detector_mgr/: ai_detector_if.py  ai_node_if.py  ai_targeting_app_node.py
etc/ai_detector_mgr/: ai_detector_mgr.yaml
scripts/: ai_detector_mgr.py
