<?xml version="1.0"?>
<package format="2">
  <name>nepi_ai_detector_mgr</name>
  <version>1.1.4</version>
  <description>NEPI ai detector manager process.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nepi@numurus.com">numurus</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>actionlib</depend>
  <depend>nepi_ros_interfaces</depend>
  <depend>nepi_edge_sdk_base</depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
  <test_depend>wget</test_depend>
</package>
